# Equalizer

./: CMakeLists.txt  README.md
cmake/: mingw-w64-toolchain.cmake
src/: dllmain.cpp  gui.cpp  gui.h  script.cpp  script.h
